[tool.poetry]
name = "themis-backend"
version = "0.1.0"
description = "Backend of the site for \"Studio Legale Minoccari Casale\""
authors = ["Gioo9le <g.minoccari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
